trying to get input working

--- a/LD_49_ScrapYard/Config/DefaultEngine.ini
+++ b/LD_49_ScrapYard/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Levels/Main_CubePlacer.Main_CubePlacer
 
 
 EditorStartupMap=/Game/Levels/Main_CubePlacer.Main_CubePlacer
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
